--- a/style.css
+++ b/style.css
@@ -14,8 +14,14 @@ body {
 }
 
 header {
-    background-color: rgb(15, 15, 15);
     padding: 5px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+header img{
+filter: drop-shadow(0px 0px 2px whitesmoke);
 }
 
 main {
