--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Galada&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -14,12 +15,98 @@ body {
 }
 
 header {
-    background-color: rgb(15, 15, 15);
     padding: 5px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+header img {
+    filter: drop-shadow(0px 0px 2px whitesmoke);
+    animation: logo 12s;
+    animation-iteration-count: 1;
+}
+
+@keyframes logo {
+    0% {
+        filter: drop-shadow(0px 0px 1px #001e49);
+    }
+
+    20% {
+        transform: translateY(15px);
+        filter: drop-shadow(0px 0px 2px whitesmoke);
+    }
+
+    70% {
+        transform: translateY(0px);
+        filter: drop-shadow(0px 0px 2px whitesmoke);
+    }
 }
 
 main {
     flex: 1;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+#contato {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding-bottom: 50px;
+}
+
+h1,
+h2 {
+    color: whitesmoke;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    animation: movimentobaixopracima 12s;
+    animation-iteration-count: 1;
+}
+
+h2 {
+    font-weight: normal;
+}
+
+#contato button {
+    cursor: pointer;
+    background-color: rgb(15, 15, 15);
+    color: whitesmoke;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    border: 0;
+    padding: 13px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 10px;
+    transition: 1.3s;
+}
+
+#contato button:hover{
+    color: black;
+    background-color: rgb(223, 223, 223);
+}
+
+.portfolio{
+    gap: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.videos{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
 }
 
 footer {
@@ -29,8 +116,7 @@ footer {
     background-color: rgb(15, 15, 15);
     padding: 6px;
     color: rgb(230, 230, 230);
-  font-family: "Galada", cursive;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 19px;
 }
