--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
 
 header img {
     filter: drop-shadow(0px 0px 2px whitesmoke);
-    animation: transicao 12s ;
+    animation: transicao 12s;
     animation-iteration-count: 1;
 }
 
@@ -59,6 +59,8 @@ main {
     text-align: center;
     align-items: center;
     padding-bottom: 50px;
+    animation: opacidade 3s;
+    animation-iteration-count: 1;
 }
 
 h1,
@@ -99,7 +101,18 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    animation: opacidade 3s;
+    animation-iteration-count: 1;
+}
 
+@keyframes opacidade {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .videos {
@@ -107,6 +120,8 @@ h2 {
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
+    animation: opacidade 5s;
+    animation-iteration-count: 1;
 }
 
 footer {
