--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Galada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     margin: 0;
@@ -6,7 +7,7 @@
 }
 
 body {
-    background-color: #001e49;
+    background-color: whitesmoke;
     min-height: 100dvh;
     max-width: 100dvw;
     display: flex;
@@ -15,31 +16,34 @@ body {
 }
 
 header {
-    padding: 5px;
+    padding: 20px;
     align-items: center;
     display: flex;
     justify-content: center;
 }
 
 header img {
-    filter: drop-shadow(0px 0px 2px whitesmoke);
-    animation: transicao 12s;
-    animation-iteration-count: 1;
+    animation: 
+    transicao 10s infinite,
+    opacidade 3s forwards;
+    
 }
 
 @keyframes transicao {
     0% {
-        filter: drop-shadow(0px 0px 1px #001e49);
-    }
-
-    20% {
-        transform: translateY(15px);
-        filter: drop-shadow(0px 0px 2px whitesmoke);
-    }
-
-    70% {
         transform: translateY(0px);
-        filter: drop-shadow(0px 0px 2px whitesmoke);
+    }
+
+    50% {
+        transform: translateY(15px);
+    }
+
+    75% {
+        transform: translateY(-15px);
+    }
+
+    100% {
+        transform: translateY(0px);
     }
 }
 
@@ -62,7 +66,7 @@ main {
     justify-content: center;
     text-align: center;
     align-items: center;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     animation: opacidade 3s;
     animation-iteration-count: 1;
     text-align: center;
@@ -70,7 +74,7 @@ main {
 
 h1,
 h2 {
-    color: whitesmoke;
+    color: #001e49;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     animation: movimentobaixopracima 12s;
     animation-iteration-count: 1;
@@ -82,7 +86,7 @@ h2 {
 
 #contato button {
     cursor: pointer;
-    background-color: rgb(15, 15, 15);
+    background-color: #001e49;
     color: whitesmoke;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -97,8 +101,8 @@ h2 {
 }
 
 #contato button:hover {
-    color: black;
-    background-color: rgb(223, 223, 223);
+    color: whitesmoke;
+    background-color: rgb(31, 31, 31);
 }
 
 .portfolio {
@@ -135,9 +139,10 @@ footer {
     text-align: center;
     text-wrap: wrap;
     background-color: rgb(15, 15, 15);
-    padding: 6px;
+    padding: 10px;
     color: rgb(230, 230, 230);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
+    font-family: 'Montserrat', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 19px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
