--- a/style.css
+++ b/style.css
@@ -29,9 +29,8 @@ header {
 header img {
     width: 400px;
     animation:
-        transicao 10s infinite,
         opacidade 3s forwards;
-    filter: drop-shadow(0px 0px 4px whitesmoke);
+    filter: grayscale(100) brightness(100);
     padding: 20px;
 
 }
@@ -129,7 +128,8 @@ h2 {
     animation-iteration-count: 1;
     text-align: center;
     min-height: 100dvh;
-    padding: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 @keyframes opacidade {
@@ -177,4 +177,4 @@ footer {
     .videos iframe {
         width: 320px;
     }
-} 
+}
