--- a/style.css
+++ b/style.css
@@ -21,24 +21,34 @@ header {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 100dvh;
+    height: 80dvh;
     background-color: rgb(14, 14, 14);
     gap: 20px;
 }
 
 header img {
-    width: 400px;
+    width: 600px;
     animation:
+
+        transicao 10s infinite,
         opacidade 3s forwards;
     filter: grayscale(100) brightness(100);
     padding: 20px;
 
 }
 
-header h1,
+header h1 {
+    color: whitesmoke;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 200;
+    animation: movimentobaixopracima 12s;
+    animation-iteration-count: 1;
+}
+
 header h2 {
     color: whitesmoke;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
     animation: movimentobaixopracima 12s;
     animation-iteration-count: 1;
 }
@@ -75,7 +85,7 @@ main {
 #contato {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     text-wrap: wrap;
     justify-content: center;
     text-align: center;
@@ -100,11 +110,11 @@ h2 {
 
 #contato button {
     cursor: pointer;
-    background-color: #001e49;
+    background-color: rgb(31, 31, 31);
     color: whitesmoke;
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
     font-size: 20px;
     border: 0;
     padding: 13px;
@@ -116,7 +126,8 @@ h2 {
 
 #contato button:hover {
     color: whitesmoke;
-    background-color: rgb(31, 31, 31);
+    background-color: #001e49;
+    transform: scale(1.05);
 }
 
 .portfolio {
